Migration to GlennFolker/EntityAnno